buildscript {
    repositories {
        mavenCentral()
        maven { url 'https://plugins.gradle.org/m2/' }
        maven { url 'https://oss.sonatype.org/content/repositories/releases/' }
    }
    // https://github.com/JetBrains/gradle-intellij-plugin/ 关注开发插件版本
    dependencies {
        classpath "org.jetbrains.intellij.plugins:gradle-intellij-plugin:0.7.3"
    }
}

//2.1 插件配置
// 这两个插件是必备
plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'com.sjhy'
version '1.2.6-java.RELEASE'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    mavenCentral()
}

// http://www.jetbrains.org/intellij/sdk/docs/tutorials/build_system/prerequisites.html
// https://plugins.jetbrains.com/docs/intellij/gradle-guide.html  官网gradle构建教程

intellij {
//    插件名称
    pluginName 'EasyCode'
    // 沙箱目录位置，用于保存IDEA的设置，默认在build文件下面，防止clean，放在根目录下。
    sandboxDirectory = "${rootProject.rootDir}/idea-sandbox"
    // 开发环境运行时使用的版本
    version '2021.2.2'
    // 社区版
//    type 'IC'
    // 企业版
    type 'IU'
    // 各种IDEA版本去这里找
    // https://www.jetbrains.com/intellij-repository/releases
    // 依赖的插件
    plugins = ['java', 'DatabaseTools']
    //Disables updating since-build attribute in plugin.xml
    updateSinceUntilBuild false
    downloadSources = true
}

dependencies {
    // jackson工具
    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    // guava工具
//    compile 'com.google.guava:guava:29.0-jre'
    // velocity支持
//    compile 'org.apache.velocity:velocity:1.7'
    // groovy支持
//    compile 'org.codehaus.groovy:groovy:3.0.2'
    // beetl支持
//    compile 'com.ibeetl:beetl:3.3.0.RELEASE'
    // freemarker支持
//    compile 'org.freemarker:freemarker:2.3.30'
    // lombok 支持
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    // 测试用例
    testCompile 'junit:junit:4.13.2'
}

